[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Items/BottleSprite.png" type="Texture" id=1]
[ext_resource path="res://06Sounds/8bit_Sounds/Hit4.wav" type="AudioStream" id=2]
[ext_resource path="res://Sprites/Items/Key.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Goblin/Gob down.png" type="Texture" id=4]
[ext_resource path="res://Nokia.tres" type="DynamicFont" id=5]
[ext_resource path="res://00_UI/pause_menu/PauseMenu.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Items/Money/Money.png" type="Texture" id=7]
[ext_resource path="res://02test/BattleBoxStyle.tres" type="StyleBox" id=8]

[sub_resource type="Theme" id=6]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 6 )

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="ItemPanel" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -108.0
margin_right = 113.0
margin_bottom = -45.0

[node name="Panel" type="Panel" parent="ItemPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = 1.0
custom_styles/panel = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PotionsCount" type="Label" parent="ItemPanel/Panel"]
margin_left = 22.0
margin_top = 13.0
margin_right = 33.0
margin_bottom = 22.0
text = "00"

[node name="Sprite" type="Sprite" parent="ItemPanel/Panel/PotionsCount"]
position = Vector2( -7, 1 )
texture = ExtResource( 1 )

[node name="KeysCount" type="Label" parent="ItemPanel/Panel"]
margin_left = 22.0
margin_top = 42.0
margin_right = 33.0
margin_bottom = 51.0
text = "00"

[node name="Sprite" type="Sprite" parent="ItemPanel/Panel/KeysCount"]
position = Vector2( -7, 1 )
texture = ExtResource( 3 )

[node name="CoinsCount" type="Label" parent="ItemPanel/Panel"]
margin_left = 22.0
margin_top = 27.0
margin_right = 33.0
margin_bottom = 36.0
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ItemPanel/Panel/CoinsCount"]
position = Vector2( -7, 1 )
texture = ExtResource( 7 )

[node name="JournalPanel" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="JournalBackPanel" type="Panel" parent="JournalPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.0
margin_top = 45.0
margin_right = 74.0
margin_bottom = 108.0
custom_styles/panel = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerLevel" type="Label" parent="JournalPanel/JournalBackPanel"]
margin_left = 12.0
margin_top = 12.0
margin_right = 52.0
margin_bottom = 21.0
text = "Level:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelNum" type="Label" parent="JournalPanel/JournalBackPanel/PlayerLevel"]
margin_left = 27.0
margin_right = 39.0
margin_bottom = 9.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPLabel" type="Label" parent="JournalPanel/JournalBackPanel"]
margin_left = 12.0
margin_top = 43.0
margin_right = 52.0
margin_bottom = 52.0
text = "HP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBoxContainer" type="HBoxContainer" parent="JournalPanel/JournalBackPanel/HPLabel"]
margin_left = 14.0
margin_right = 54.0
margin_bottom = 9.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPNum" type="Label" parent="JournalPanel/JournalBackPanel/HPLabel/HPBoxContainer"]
margin_right = 13.0
margin_bottom = 8.0
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slash" type="Label" parent="JournalPanel/JournalBackPanel/HPLabel/HPBoxContainer"]
margin_left = 17.0
margin_right = 21.0
margin_bottom = 8.0
text = "/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPMax" type="Label" parent="JournalPanel/JournalBackPanel/HPLabel/HPBoxContainer"]
margin_left = 25.0
margin_right = 38.0
margin_bottom = 8.0
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Damage" type="Label" parent="JournalPanel/JournalBackPanel"]
margin_left = 12.0
margin_top = 33.0
margin_right = 52.0
margin_bottom = 42.0
text = "Dmg:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageNum" type="Label" parent="JournalPanel/JournalBackPanel/Damage"]
margin_left = 22.0
margin_right = 38.0
margin_bottom = 9.0
text = "000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" type="Sprite" parent="JournalPanel/JournalBackPanel"]
position = Vector2( 74, 17 )
texture = ExtResource( 4 )
hframes = 8

[node name="CharName" type="Label" parent="JournalPanel/JournalBackPanel/Character"]
margin_left = -15.0
margin_top = 10.0
margin_right = 15.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 5 )
text = "Goblin"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="JournalPanel/JournalBackPanel"]
margin_left = 86.0
margin_top = 43.0
margin_right = 136.0
margin_bottom = 52.0
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
text = "Debug Mode"
align = 2

[node name="Area" type="Label" parent="JournalPanel/JournalBackPanel"]
margin_left = 96.0
margin_top = 12.0
margin_right = 136.0
margin_bottom = 33.0
text = "Oubliette
1F"
align = 2

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackPanel" type="Panel" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -38.0
margin_right = 37.0
margin_bottom = 38.0
custom_styles/panel = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -26.0
margin_right = 20.0
margin_bottom = -16.0
focus_neighbour_top = NodePath("../Quit")
theme = SubResource( 6 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
shortcut_in_tooltip = false
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Button" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -15.0
margin_right = 20.0
margin_bottom = -5.0
theme = SubResource( 6 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
shortcut_in_tooltip = false
text = "Items"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Journal" type="Button" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -4.0
margin_right = 20.0
margin_bottom = 6.0
theme = SubResource( 6 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
shortcut_in_tooltip = false
text = "Journal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = 7.0
margin_right = 20.0
margin_bottom = 17.0
theme = SubResource( 6 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
shortcut_in_tooltip = false
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = 18.0
margin_right = 20.0
margin_bottom = 28.0
focus_neighbour_bottom = NodePath("../Resume")
theme = SubResource( 6 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
shortcut_in_tooltip = false
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="Menu/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Menu/Items" to="." method="_on_Items_pressed"]
[connection signal="pressed" from="Menu/Journal" to="." method="_on_Journal_pressed"]
[connection signal="pressed" from="Menu/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Menu/Quit" to="." method="_on_Quit_pressed"]
